improve css for diagnostics in dark mode

--- a/src/client/src/styles/style.css
+++ b/src/client/src/styles/style.css
@@ -857,4 +857,12 @@ nav > div #docs-btn .long-text {
         background-color: var(--dark);
         color: var(--light);
     }
+
+    #diagnostics li p {
+        color: var(--light);
+    }
+
+    #diagnostics li strong {
+        color: var(--light);
+    }
 }
