Allow user to reset setting to default values

--- a/src/client/src/styles/style.css
+++ b/src/client/src/styles/style.css
@@ -866,3 +866,11 @@ nav > div #docs-btn .long-text {
         color: var(--light);
     }
 }
+
+.reset-settings {
+    display: flex;
+}
+
+.reset-settings > button {
+    margin: auto;
+}
