[Proposition] Allow user to reset setting to default values (#630)
* Allow user to reset setting to default values

* Move styling closer to fantomas-tab comment

* Move the Reset setting button up

--- a/src/client/src/styles/style.css
+++ b/src/client/src/styles/style.css
@@ -787,6 +787,14 @@ nav > div #docs-btn .long-text {
     margin: 0;
 }
 
+.reset-settings {
+    display: flex;
+}
+
+.reset-settings > button {
+    margin: auto;
+}
+
 /* dark mode */
 @media (prefers-color-scheme: dark) {
     :root {
